tests/api/reference/negative/02-return-in-procedure.asm
fn invalid() {
    return 1
}

invalid()
